agrego un par de boludeces

--- a/soapfriendship/public/stylesheets/style.css
+++ b/soapfriendship/public/stylesheets/style.css
@@ -1,8 +1,6 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
+.body {
+	border: 0px;
+	margin: 0px;
+	padding: 0px;
+	background-color: pink;
 }
